# datahub-action-glossary-export

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT.md  INDEX.md  LOCAL_EXECUTION.md  Makefile  OVERVIEW.md  PROJECT_STRUCTURE.md  QUICKSTART.md  README.md  RUNNING_LOCALLY.md  SNOWFLAKE_SETUP.md  SUMMARY.md  example_action.yaml  glossary_export_local.yaml  pyproject.toml  requirements.txt  run_local.sh  setup.py  test_connection.py  test_local_setup.py
.github/workflows/: release.yml  test.yml
action_glossary_export/: __init__.py  config.py  glossary_export_action.py  graphql.py  models.py  snowflake.py  transformers.py
docs/: GLOSSARY_USAGE_GUIDE.md  INTEGRATION_TESTS.md  QUICKSTART_USAGE.md  TEST_VERIFICATION.md
examples/: README.md  example_action.yaml  example_queries.sql  example_usage_queries.sql
scripts/: README.md  test_graphql_live.py  test_graphql_query.graphql  test_snowflake_writes.py
tests/: __init__.py  test_glossary_export_action.py  test_snowflake_integration.py
